[tool.poetry]
name = "mrfmsim-unit"
version = "0.0.1"
description = "Unit solutions for Magnetic Resonance Force Microscopy experiments"
authors = ["Peter Sun <hs859@cornell.edu>"]
maintainers = ["Peter Sun <hs859@cornell.edu>"]
repository = "https://www.github.edu/Marohn-Group/mrfmsim-unit"
readme = "README.rst"
packages = [
    { include = "mrfmsim_unit/*.py" }
]

[tool.poetry.dependencies]
python = ">=3.10"
pint = ">=0.22"
pytest = { version = ">=7.1.1", optional = true }
pytest-cov = { version = ">=3.0.0", optional = true }


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.1"
pytest-cov = ">=3.0.0"

[tool.poetry.extras]
test = ["pytest", "pytest-cov"]

[tool.poetry.plugins."mrfmsim_plugin"]
unit = "mrfmsim_unit.unit"

[tool.pytest.ini_options]
filterwarnings = [
    # note the use of single quote below to denote "raw" strings in TOML
    # the escape sequence is necessary in graphviz dot string
    # used to left align node text
    'ignore:invalid escape sequence \\l:DeprecationWarning',
    # The parallel method of numba might not be used in test
    # ignore the warning
    'ignore::numba.NumbaPerformanceWarning',
    # the plot plugin's mayavi package has a deprecation warning
    'ignore::DeprecationWarning',
]

[tool.coverage.run]
# pytest coverage
source_pkgs = [
    'mrfmsim_unit',
]
omit = ['tests/*']
